--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ description = "rxpress is an open-source server library in Rust similar to expre
 # homepage = "https://crates.io/crates/rxpress"
 documentation = "https://docs.rs/rxpress"
 repository = "https://github.com/alfaarghya/rxpress"
-keywords = ["rxpress", "http", "server", "http-server", "backend", "web"]
+keywords = ["rxpress", "http", "server", "http-server", "backend"]
 categories = ["http-server", "server", "web-programming"]
 
 [lib]
